# How-to-develop-your-own-napari-plugin

./: README.md
napari-otsu/: LICENSE  README.md  setup.cfg  tox.ini
napari-otsu/src/napari_otsu/: __init__.py  _widget.py  napari.yaml
napari-otsu/src/napari_otsu.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
napari-otsu/src/napari_otsu/_tests/: test_widget.py
